minors corrections (linebreak)

--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -112,7 +112,6 @@ DataScientist/MLOps/Data Product Manager}
 \cvachievement{\faCaretRight}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
 
 \cvsection{Certifications}
-
 {\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
 {\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
 {\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
@@ -121,18 +120,21 @@ DataScientist/MLOps/Data Product Manager}
 %{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
 
 \cvsection{Compétences}
-
 \cvtag{Autonome {\color{SlateGrey}\faDove}}
 \cvtag{Moteur {\color{SlateGrey}\faBullhorn}}
 \cvtag{Résilient {\color{SlateGrey}\faTree}}\\
 \cvtag{Excellence opérationnelle {\color{SlateGrey}\faCogs}}
 \cvtag{Pluridisciplinaire {\color{SlateGrey}\faHandshake}}
-\divider
 \\
+\divider
+\bigskip
+
 \cvtag{MLOps {\color{SlateGrey}\faSync*}}
 \cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \cvtag{Python {\color{SlateGrey}\faPython}}
-\\
+
+\bigskip
+
 \cvtag{(No)SQL) {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
 \cvtag{API / MCP / Scraping {\color{SlateGrey}\faPlug}}
@@ -140,7 +142,9 @@ DataScientist/MLOps/Data Product Manager}
 
 \cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
-\\
+
+\bigskip
+
 \cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
 \cvtag{Cloud {\color{SlateGrey}\faCloud}}
@@ -148,7 +152,9 @@ DataScientist/MLOps/Data Product Manager}
 \cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
 \cvtag{Conformité {\color{SlateGrey}\faBalanceScale}}
 \cvtag{Sécurité {\color{SlateGrey}\faShield*}}
-\\
+
+\bigskip
+
 \cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
 \cvtag{Hypervision {\color{SlateGrey}\faServer}}
 \cvtag{Supervision {\color{SlateGrey}\faEye}}
@@ -175,14 +181,8 @@ DataScientist/MLOps/Data Product Manager}
 \end{itemize}
 \divider
 \cvevent{Freelance}{}{2012 -- 2016}{Télétravail}
-%\begin{itemize}
-%\item Services IT. Développement web et graphisme.
-%\end{itemize}
 \divider
 \cvevent{Responsable SI - CEMÉA Aquitaine}{}{2011}{Télétravail}
-%\begin{itemize}
-%\item Technicien et animateur en Service Civique.
-%\end{itemize}
 
 \cvsection{Projets réalisés}
 {\faRobot}{Invention d'un bras robotique piloté par IA\\
