Minors update (fr+en)

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -13,6 +13,8 @@
   \smallskip%
 }
 
+\renewenvironment{quote}{\color{accent}\itshape}{\par}
+
 % Layout
 \geometry{left=1.25cm,right=1.25cm,top=1.5cm,bottom=1.5cm,columnsep=1.2cm}
 
@@ -94,10 +96,8 @@
 \cvsection{Profile}
 \begin{quote}
 ``
-Versatile engineer with over 10 years of experience in infrastructure management and technical support, refocused on Data and AI. Certified Data Scientist and MLOps.
-I combine technical expertise and project management to design and deploy complete data solutions (MLOps, cloud, DevOps, security, ...). \\
-Passionate about open-source innovation, I help manage projects end-to-end by acting as a \\
-facilitator between different experts.''
+Engineer with over 10 years of experience in infrastructure management and technical support.\\
+As a certified Data Scientist and MLOps expert, I combine technical expertise and project management to design and deploy comprehensive data solutions (MLOps, cloud, DevOps, security, ...). Passionate about open-source innovation, I help manage projects from end-to-end by acting as a facilitator between various experts.''
 \end{quote}
 
 \bigskip
@@ -186,22 +186,29 @@ DataScientist/MLOps/Data Product Manager}
 
 \cvsection{Completed projects}
 {\faRobot}{Invention of an AI-driven robotic arm\\
-\textit{HACK1ROBO, 2025}}\\
+\textit{Caligraphomate, Hackathon HACK1ROBO, 2025}\\
+\smallskip
 {\faChartLine}{Improvement of the Cartofriches platform for CEREMA}\\
+\textit{Data exploration, French Gov, 2025}\\
+\smallskip
 {\faCogs}{Implementation of an AI model}\\
 \textit{End-to-end MLOPS deployment for sports betting}\\
+\smallskip
 {\faEye}{CNN model design}\\
 \textit{Mushroom recognition application}\\
+\smallskip
 {\faMedkit}{AI-based medical detector design}\\
 \textit{Parkinson Stress Shield, Datathon Dijon 2025}\\
+\smallskip
 {\faLightbulb}{Foundation of a FabLab}\\
 \textit{Cognhacker, in the city of Cognac}\\
+\smallskip
 {\faFlask}{Startup Weekend Bordeaux}\\
-\textit{Winning projects from the 2012, 2013, and 2017 editions}\\
+\textit{Winning projects from the 2012, 2013, and 2017 editions}}\\
 %{\faHandHoldingHeart}{Creation of associations for inclusion/solidarity}
 
 \raggedleft
-\bigskip
+
 \bigskip
 {\textit{\today}}\github{heuzef/cv}
 \end{paracol}
