--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -13,6 +13,8 @@
   \smallskip%
 }
 
+\renewenvironment{quote}{\color{accent}\itshape}{\par}
+
 % Layout
 \geometry{left=1.25cm,right=1.25cm,top=1.5cm,bottom=1.5cm,columnsep=1.2cm}
 
@@ -92,12 +94,11 @@
 \makecvheader
 
 \cvsection{À propos}
+
 \begin{quote}
 ``
-Ingénieur polyvalent avec plus de 10 ans d’expérience en gestion d’infrastructure et support technique,\\ 
-réorienté vers la Data et l’IA. Certifié DataScientist et MLOps.\\
-Je combine expertise technique et gestion de projet pour concevoir et déployer des solutions \\
-data complètes (MLOps, cloud, DevOps, sécurité, ...). Passionné par l’innovation open-source, j'aide à \\piloter des projets de bout en bout en jouant un rôle de facilitateur entre différents experts.''
+Ingénieur avec plus de 10 ans d’expérience en gestion d’infrastructure et support technique.\\
+Certifié DataScientist et MLOps, je combine expertise technique et gestion de projet pour concevoir et déployer des solutions data complètes (MLOps, cloud, DevOps, sécurité, ...). Passionné par l’innovation open-source, j'aide à piloter des projets de bout en bout en jouant un rôle de facilitateur entre différents experts.''
 \end{quote}
 
 \bigskip
@@ -186,22 +187,28 @@ DataScientist/MLOps/Data Product Manager}
 
 \cvsection{Projets réalisés}
 {\faRobot}{Invention d'un bras robotique piloté par IA\\
-\textit{HACK1ROBO, 2025}}\\
-{\faChartLine}{Amélioration dispositif Cartofriches pour le CEREMA}\\
+\textit{Caligraphomate, Hackathon HACK1ROBO, 2025}\\
+\smallskip
+{\faChartLine}{Amélioration du dispositif Cartofriches pour le CEREMA}\\
+\textit{Exploitation des données, MTECT, 2025}\\
+\smallskip
 {\faCogs}{Mise en production d'un modèle d'IA}\\
 \textit{Déploiement MLOPS end-to-end pour du paris sportif}\\
+\smallskip
 {\faEye}{Conception modèle CNN}\\
 \textit{Application de reconaissance de champignions}\\
+\smallskip
 {\faMedkit}{Conception détecteur médicale à base d'IA}\\
 \textit{Parkinson Stress Shield, Datathon Dijon 2025}\\
+\smallskip
 {\faLightbulb}{Fondation d'un FabLab}\\
 \textit{Cognhacker, dans la ville de Cognac}\\
+\smallskip
 {\faFlask}{Startup Weekend Bordeaux}\\
-\textit{Projets gagnants des éditions 2012, 2013 et 2017}\\
+\textit{Projets gagnants des éditions 2012, 2013 et 2017}}\\
 %{\faHandHoldingHeart}{Création d'associations pour l'inclusion/solidarité}
 
 \raggedleft
-\bigskip
 \bigskip
 {\textit{\today}}\github{heuzef/cv}
 \end{paracol}
