--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -135,7 +135,7 @@ DataScientist/MLOps/Data Product Manager}
 
 \bigskip
 
-\cvtag{(No)SQL) {\color{SlateGrey}\faDatabase}}
+\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
 \cvtag{API / MCP / Scraping {\color{SlateGrey}\faPlug}}
 \cvtag{Data Viz (PowerBI, Looker Studio, Python libs){\color{SlateGrey}\faChartPie}}
