Majors update (fr + en)

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -95,9 +95,9 @@
 
 \cvsection{Profile}
 \begin{quote}
-``
-Engineer with over 10 years of experience in infrastructure management and technical support.\\
-As a certified Data Scientist and MLOps expert, I combine technical expertise and project management to design and deploy comprehensive data solutions (MLOps, cloud, DevOps, security, ...). Passionate about open-source innovation, I help manage projects from end-to-end by acting as a facilitator between various experts.''
+``With 10 years of experience in managing critical infrastructure and providing technical support, I combine technical expertise and project management skills to design innovative and sustainable solutions. \\
+As a specialist in system administration, networking, and data management, I solve issues, optimise performance, and support teams through training.
+My approach blends responsiveness and project leadership, serving as a bridge between experts and stakeholders.''
 \end{quote}
 
 \bigskip
@@ -119,48 +119,55 @@ DataScientist/MLOps/Data Product Manager}
 {\faCaretRight}{CISCO CCNA1}{ - 2013}\\
 %{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
 
+\cvsection{Certifications}
+{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
+{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
+{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
+%{\faCaretRight}{Chinois A1}{ - 2023}\\
+{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
+%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
+
 \cvsection{Skills}
 \cvtag{Autonomous {\color{SlateGrey}\faDove}}
-\cvtag{Motivator {\color{SlateGrey}\faBullhorn}}
-\cvtag{Resilient {\color{SlateGrey}\faTree}}\\
+\cvtag{Leadership {\color{SlateGrey}\faBullhorn}}
+\cvtag{Résilient {\color{SlateGrey}\faTree}}\\
 \cvtag{Operational Excellence {\color{SlateGrey}\faCogs}}
 \cvtag{Multidisciplinary {\color{SlateGrey}\faHandshake}}
 \\
 \divider
-\bigskip
 
-\cvtag{MLOps {\color{SlateGrey}\faSync*}}
-\cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \cvtag{Python {\color{SlateGrey}\faPython}}
+\cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
+\cvtag{MLOps {\color{SlateGrey}\faSync*}}
 
-\bigskip
 
-\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
+\cvtag{DB {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{API / MCP / Scraping {\color{SlateGrey}\faPlug}}
-\cvtag{Data Viz (PowerBI, Looker Studio, Python libs){\color{SlateGrey}\faChartPie}}
+\cvtag{Data Viz{\color{SlateGrey}\faChartPie}}
+
+
+\cvtag{GDPR {\color{SlateGrey}\faGlobeEurope}}
+\cvtag{Compliance {\color{SlateGrey}\faBalanceScale}}
+\cvtag{Sécurity {\color{SlateGrey}\faShield*}}
+
 
 \cvtag{Conteneurization {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
 
-\bigskip
+
+\cvtag{TCP/IP Network{\color{SlateGrey}\faNetworkWired}}
+\cvtag{Hypervision {\color{SlateGrey}\faServer}}
+\cvtag{Supervision {\color{SlateGrey}\faEye}}
+
 
 \cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
 \cvtag{Cloud {\color{SlateGrey}\faCloud}}
 
-\cvtag{GDPR {\color{SlateGrey}\faGlobeEurope}}
-\cvtag{Compliance {\color{SlateGrey}\faBalanceScale}}
-\cvtag{Security {\color{SlateGrey}\faShield*}}
-
 \bigskip
 
-\cvtag{TCP/IP Network {\color{SlateGrey}\faNetworkWired}}
-\cvtag{Hypervision {\color{SlateGrey}\faServer}}
-\cvtag{Supervision {\color{SlateGrey}\faEye}}
-
-\textit{Interests:}\\
-{\faUserNinja} Aïkido {\faServer} Self-hosted {\faLinux} Free Software\\
+\textit{Interests :}\\
+{\faUserNinja} Aïkido {\faLinux} Open-Source {\faLightbulb} Engineering\\
 
 \switchcolumn
 
@@ -180,7 +187,7 @@ DataScientist/MLOps/Data Product Manager}
 \item Crisis and emergency situation resolution.
 \end{itemize}
 \divider
-\cvevent{Freelance}{}{2012 -- 2016}{Remote}
+\cvevent{Freelance IT Services}{}{2012 -- 2016}{Remote}
 \divider
 \cvevent{IT Manager - CEMÉA Aquitaine}{}{2011}{Remote}
 
