--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -96,9 +96,8 @@
 \cvsection{À propos}
 
 \begin{quote}
-``
-Ingénieur avec plus de 10 ans d’expérience en gestion d’infrastructure et support technique.\\
-Certifié DataScientist et MLOps, je combine expertise technique et gestion de projet pour concevoir et déployer des solutions data complètes (MLOps, cloud, DevOps, sécurité, ...). Passionné par l’innovation open-source, j'aide à piloter des projets de bout en bout en jouant un rôle de facilitateur entre différents experts.''
+``Ingénieur avec 10 ans d’expérience en gestion d’infrastructures critiques et en support technique, je combine expertise technique et gestion de projet pour concevoir des solutions innovantes et durables. \\
+Expert en administration système, réseaux et données, je résous les problèmes, optimise les performances, accompagne et forme. Mon approche allie réactivité et pilotage de projets, en tant qu’interface entre les différents experts et parties prenantes.''
 \end{quote}
 
 \bigskip
@@ -110,7 +109,15 @@ Certifié DataScientist et MLOps, je combine expertise technique et gestion de p
 DataScientist/MLOps/Data Product Manager}
 \cvachievement{\faCaretRight}{Gestionnaire en Maintenance et \linebreak Support Informatique}{CESI, RNCP 34602 Niveau 5, 2015}
 \cvachievement{\faCaretRight}{Technicien Supérieur Gestionnaire exploitant de Ressources Informatiques}{Site-Informatique, RNCP5918 Niveau 5, 2013}
-\cvachievement{\faCaretRight}{Conseiller et Assistant en Technologies de l'Information de de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
+\cvachievement{\faCaretRight}{Conseiller et Assistant en Technologies de l'Information de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
+
+\cvsection{Certifications}
+{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
+{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
+{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
+%{\faCaretRight}{Chinois A1}{ - 2023}\\
+{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
+%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
 
 \cvsection{Certifications}
 {\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
@@ -128,40 +135,34 @@ DataScientist/MLOps/Data Product Manager}
 \cvtag{Pluridisciplinaire {\color{SlateGrey}\faHandshake}}
 \\
 \divider
-\bigskip
 
-\cvtag{MLOps {\color{SlateGrey}\faSync*}}
-\cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \cvtag{Python {\color{SlateGrey}\faPython}}
+\cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
+\cvtag{MLOps {\color{SlateGrey}\faSync*}}
 
-\bigskip
-
-\cvtag{(No)SQL {\color{SlateGrey}\faDatabase}}
+\cvtag{DB {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
-\cvtag{API / MCP / Scraping {\color{SlateGrey}\faPlug}}
-\cvtag{Data Viz (PowerBI, Looker Studio, Python libs){\color{SlateGrey}\faChartPie}}
-
-\cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
-\cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
-
-\bigskip
-
-\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
-\cvtag{IaC {\color{SlateGrey}\faCode}}
-\cvtag{Cloud {\color{SlateGrey}\faCloud}}
+\cvtag{Data Viz{\color{SlateGrey}\faChartPie}}
 
 \cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
 \cvtag{Conformité {\color{SlateGrey}\faBalanceScale}}
 \cvtag{Sécurité {\color{SlateGrey}\faShield*}}
 
-\bigskip
+\cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
+\cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
 
 \cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
 \cvtag{Hypervision {\color{SlateGrey}\faServer}}
 \cvtag{Supervision {\color{SlateGrey}\faEye}}
 
+\cvtag{Git {\color{SlateGrey}\faCodeBranch}}
+\cvtag{IaC {\color{SlateGrey}\faCode}}
+\cvtag{Cloud {\color{SlateGrey}\faCloud}}
+
+\bigskip
+
 \textit{Centre d'intérêts :}\\
-{\faUserNinja} Aïkido {\faServer} Auto-hébergement {\faLinux} Logiciels Libre\\
+{\faUserNinja} Aïkido {\faLinux} Open-Source {\faLightbulb} Ingénierie\\
 
 \switchcolumn
 
@@ -181,7 +182,7 @@ DataScientist/MLOps/Data Product Manager}
 \item Résolutions des situations de crise et d’urgence.
 \end{itemize}
 \divider
-\cvevent{Freelance}{}{2012 -- 2016}{Télétravail}
+\cvevent{Freelance services IT}{}{2012 -- 2016}{Télétravail}
 \divider
 \cvevent{Responsable SI - CEMÉA Aquitaine}{}{2011}{Télétravail}
 
