Cleaning format (fr + en)

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -95,8 +95,8 @@
 
 \cvsection{Profile}
 \begin{quote}
-``With 10 years of experience in managing critical infrastructure and providing technical support, I combine technical expertise and project management skills to design innovative and sustainable solutions. \\
-As a specialist in system administration, networking, and data management, I solve issues, optimise performance, and support teams through training.
+``An engineer with 10 years of experience in critical infrastructure management and technical support, I leverage expertise and project management skills to design innovative and sustainable solutions. \\
+As a specialist in system administration, networking, and data management, I solve issues, optimise performance, and support. \\
 My approach blends responsiveness and project leadership, serving as a bridge between experts and stakeholders.''
 \end{quote}
 
