--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -96,8 +96,10 @@
 \cvsection{À propos}
 
 \begin{quote}
-``Ingénieur avec 10 ans d’expérience en gestion d’infrastructures critiques et en support technique, je combine expertise technique et gestion de projet pour concevoir des solutions innovantes et durables. \\
-Expert en administration système, réseaux et données, je résous les problèmes, optimise les performances, accompagne et forme. Mon approche allie réactivité et pilotage de projets, en tant qu’interface entre les différents experts et parties prenantes.''
+``Ingénieur avec 10 ans d’expérience en gestion d’infrastructures critiques et en support technique, je combine expertise \\
+et gestion de projet pour concevoir des solutions innovantes et durables. \\
+Expert en administration système, réseaux et données, je résous les problèmes, optimise les performances, accompagne et forme. \\
+Mon approche allie réactivité et pilotage de projets, en tant qu’interface entre les différents experts et parties prenantes.''
 \end{quote}
 
 \bigskip
