Remove duplicate data (fr +en)

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -119,14 +119,6 @@ DataScientist/MLOps/Data Product Manager}
 {\faCaretRight}{CISCO CCNA1}{ - 2013}\\
 %{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
 
-\cvsection{Certifications}
-{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
-{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
-{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
-%{\faCaretRight}{Chinois A1}{ - 2023}\\
-{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
-%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
-
 \cvsection{Skills}
 \cvtag{Autonomous {\color{SlateGrey}\faDove}}
 \cvtag{Leadership {\color{SlateGrey}\faBullhorn}}
@@ -140,25 +132,30 @@ DataScientist/MLOps/Data Product Manager}
 \cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \cvtag{MLOps {\color{SlateGrey}\faSync*}}
 
+\bigskip
 
 \cvtag{DB {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
 \cvtag{Data Viz{\color{SlateGrey}\faChartPie}}
 
+\bigskip
 
 \cvtag{GDPR {\color{SlateGrey}\faGlobeEurope}}
 \cvtag{Compliance {\color{SlateGrey}\faBalanceScale}}
 \cvtag{Sécurity {\color{SlateGrey}\faShield*}}
 
+\bigskip
 
 \cvtag{Conteneurization {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
 
+\bigskip
 
 \cvtag{TCP/IP Network{\color{SlateGrey}\faNetworkWired}}
 \cvtag{Hypervision {\color{SlateGrey}\faServer}}
 \cvtag{Supervision {\color{SlateGrey}\faEye}}
 
+\bigskip
 
 \cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
