--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -121,14 +121,6 @@ DataScientist/MLOps/Data Product Manager}
 {\faCaretRight}{CISCO CCNA1}{ - 2013}\\
 %{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
 
-\cvsection{Certifications}
-{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
-{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
-{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
-%{\faCaretRight}{Chinois A1}{ - 2023}\\
-{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
-%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
-
 \cvsection{Compétences}
 \cvtag{Autonome {\color{SlateGrey}\faDove}}
 \cvtag{Moteur {\color{SlateGrey}\faBullhorn}}
@@ -142,20 +134,30 @@ DataScientist/MLOps/Data Product Manager}
 \cvtag{ML/DL/LLM {\color{SlateGrey}\faBrain}}
 \cvtag{MLOps {\color{SlateGrey}\faSync*}}
 
+\bigskip
+
 \cvtag{DB {\color{SlateGrey}\faDatabase}}
 \cvtag{ETL {\color{SlateGrey}\faFileDownload}}
 \cvtag{Data Viz{\color{SlateGrey}\faChartPie}}
+
+\bigskip
 
 \cvtag{RGPD {\color{SlateGrey}\faGlobeEurope}}
 \cvtag{Conformité {\color{SlateGrey}\faBalanceScale}}
 \cvtag{Sécurité {\color{SlateGrey}\faShield*}}
 
+\bigskip
+
 \cvtag{Conteneurisation {\color{SlateGrey}\faDocker}}
 \cvtag{Orchestration {\color{SlateGrey}\faBoxes}}
+
+\bigskip
 
 \cvtag{Réseaux TCP/IP {\color{SlateGrey}\faNetworkWired}}
 \cvtag{Hypervision {\color{SlateGrey}\faServer}}
 \cvtag{Supervision {\color{SlateGrey}\faEye}}
+
+\bigskip
 
 \cvtag{Git {\color{SlateGrey}\faCodeBranch}}
 \cvtag{IaC {\color{SlateGrey}\faCode}}
