Update for 2026 (FR + EN). New job and include certifications badges.

--- a/en/heuzef_cv.tex
+++ b/en/heuzef_cv.tex
@@ -112,12 +112,14 @@ DataScientist/MLOps/Data Product Manager}
 \cvachievement{\faCaretRight}{IT Communication Advisor}{AFPA, RNCP4537 Level 4, 2011}
 
 \cvsection{Certifications}
-{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
-{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
-{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
-%{\faCaretRight}{Chinois A1}{ - 2023}\\
-{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
-%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
+\includegraphics[width=0.15\linewidth]{aws.png}
+\includegraphics[width=0.15\linewidth]{dataiku.png}
+\includegraphics[width=0.15\linewidth]{opencv.png}
+\includegraphics[width=0.15\linewidth]{liora.png}
+%\includegraphics[width=0.15\linewidth]{empty.png}
+%\includegraphics[width=0.15\linewidth]{empty.png}
+\\
+{\faCaretRight}{linkedin.com/in/heuzef/details/certifications}{}\\
 
 \cvsection{Skills}
 \cvtag{Autonomous {\color{SlateGrey}\faDove}}
@@ -169,6 +171,8 @@ DataScientist/MLOps/Data Product Manager}
 \switchcolumn
 
 \cvsection{Work Experiences}
+\cvevent{Data Consultant - BiiR}{}{2026 - Currently}{Bordeaux}
+\divider
 \cvevent{Senior IT Technician - Firewall-Services}{}{2013 -- 2023}{Remote}
 \begin{itemize}
 \item Digital service company (security and free software).
@@ -184,12 +188,15 @@ DataScientist/MLOps/Data Product Manager}
 \item Crisis and emergency situation resolution.
 \end{itemize}
 \divider
-\cvevent{Freelance IT Services}{}{2012 -- 2016}{Remote}
-\divider
-\cvevent{IT Manager - CEMÉA Aquitaine}{}{2011}{Remote}
+
+\cvevent{Before 2012}{}{}{Remote}
+\begin{itemize}
+\item Freelance IT Services - Heuzef
+\item IT Manager - CEMÉA Aquitaine
+\end{itemize}
 
 \cvsection{Completed projects}
-{\faRobot}{Invention of an AI-driven robotic arm\\
+{\faRobot}{Invention of an AI-driven robotic arm}\\
 \textit{Caligraphomate, Hackathon HACK1ROBO, 2025}\\
 \smallskip
 {\faChartLine}{Improvement of the Cartofriches platform for CEREMA}\\
@@ -207,8 +214,8 @@ DataScientist/MLOps/Data Product Manager}
 {\faLightbulb}{Foundation of a FabLab}\\
 \textit{Cognhacker, in the city of Cognac}\\
 \smallskip
-{\faFlask}{Startup Weekend Bordeaux}\\
-\textit{Winning projects from the 2012, 2013, and 2017 editions}}\\
+%{\faFlask}{Startup Weekend Bordeaux}\\
+%\textit{Winning projects from the 2012, 2013, and 2017 editions}\\
 %{\faHandHoldingHeart}{Creation of associations for inclusion/solidarity}
 
 \raggedleft
