--- a/fr/heuzef_cv.tex
+++ b/fr/heuzef_cv.tex
@@ -114,12 +114,14 @@ DataScientist/MLOps/Data Product Manager}
 \cvachievement{\faCaretRight}{Conseiller et Assistant en Technologies de l'Information de la Communication}{AFPA, RNCP4537 Niveau 4, 2011}
 
 \cvsection{Certifications}
-{\faCaretRight}{Dataiku MLOps Practitioner Certificate}{ - 2025}\\
-{\faCaretRight}{AWS Certified Cloud Practitioner}{ - 2025}\\
-{\faCaretRight}{OpenCV University Bootcamp}{ - 2024}\\
-%{\faCaretRight}{Chinois A1}{ - 2023}\\
-{\faCaretRight}{CISCO CCNA1}{ - 2013}\\
-%{\faCaretRight}{Designer Graphiste Lignes et Formations}{ - 2011}\\
+\includegraphics[width=0.15\linewidth]{aws.png}
+\includegraphics[width=0.15\linewidth]{dataiku.png}
+\includegraphics[width=0.15\linewidth]{opencv.png}
+\includegraphics[width=0.15\linewidth]{liora.png}
+%\includegraphics[width=0.15\linewidth]{empty.png}
+%\includegraphics[width=0.15\linewidth]{empty.png}
+\\
+{\faCaretRight}{linkedin.com/in/heuzef/details/certifications}{}\\
 
 \cvsection{Compétences}
 \cvtag{Autonome {\color{SlateGrey}\faDove}}
@@ -171,7 +173,9 @@ DataScientist/MLOps/Data Product Manager}
 \switchcolumn
 
 \cvsection{Expériences}
-\cvevent{Technicien supérieur IT - Firewall-Services}{}{2013 -- 2023}{Télétravail}
+\cvevent{Consultant Data - BiiR}{}{2026 - Actuellement}{Bordeaux}
+\divider
+\cvevent{Technicien supérieur IT - Firewall-Services}{}{2013 - 2023}{Télétravail}
 \begin{itemize}
 \item ESN spécialisée en sécurité et en logiciels libres.
 \item Administration et supervision des infrastructures IT.
@@ -186,12 +190,14 @@ DataScientist/MLOps/Data Product Manager}
 \item Résolutions des situations de crise et d’urgence.
 \end{itemize}
 \divider
-\cvevent{Freelance services IT}{}{2012 -- 2016}{Télétravail}
-\divider
-\cvevent{Responsable SI - CEMÉA Aquitaine}{}{2011}{Télétravail}
+\cvevent{Avant 2012}{}{}{Télétravail}
+\begin{itemize}
+\item Freelance services IT - Heuzef
+\item Responsable SI - CEMÉA Aquitaine
+\end{itemize}
 
 \cvsection{Projets réalisés}
-{\faRobot}{Invention d'un bras robotique piloté par IA\\
+{\faRobot}{Invention d'un bras robotique piloté par IA}\\
 \textit{Caligraphomate, Hackathon HACK1ROBO, 2025}\\
 \smallskip
 {\faChartLine}{Amélioration du dispositif Cartofriches pour le CEREMA}\\
@@ -209,8 +215,8 @@ DataScientist/MLOps/Data Product Manager}
 {\faLightbulb}{Fondation d'un FabLab}\\
 \textit{Cognhacker, dans la ville de Cognac}\\
 \smallskip
-{\faFlask}{Startup Weekend Bordeaux}\\
-\textit{Projets gagnants des éditions 2012, 2013 et 2017}}\\
+%{\faFlask}{Startup Weekend Bordeaux}\\
+%\textit{Projets gagnants des éditions 2012, 2013 et 2017}\\
 %{\faHandHoldingHeart}{Création d'associations pour l'inclusion/solidarité}
 
 \raggedleft
